# ScryBot

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: search_training.csv
scrybot/: __init__.py  __main__.py  parser.py
scrybot/api/: named.py  search.py
scrybot/cogs/: __init__.py  search.py
scrybot/commands/: ping.py
scrybot/search/: __init__.py  __main__.py
tools/: chatgpt_data_generate.py  fine_tune_model.py
